--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,7 @@
+png filter=lfs diff=lfs merge=lfs -text
+html filter=lfs diff=lfs merge=lfs -text
+ipynb filter=lfs diff=lfs merge=lfs -text
+tif filter=lfs diff=lfs merge=lfs -text
 *.html filter=lfs diff=lfs merge=lfs -text
 *.png filter=lfs diff=lfs merge=lfs -text
 Processed/* filter=lfs diff=lfs merge=lfs -text
